fixed whitespace bugs and optimized rendering

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,4 +6,5 @@ $netflix_background: #111;
 
 .app {
     background-color: $netflix_background;
+    border: 0.1px solid $netflix_background;
 }
