--- a/src/styles/Row.scss
+++ b/src/styles/Row.scss
@@ -17,6 +17,6 @@
     }
 
     .poster:hover {
-        transform: scale(1.1);
+        transform: scale(1.14);
     }
 }
